# market-beta-supply

./: .gitignore  README.md  pyproject.toml
bwsa_beta_supply/: main.py
data/: beta_dist-2021-01-01 00:00:00.json  beta_dist-2021-01-04 00:00:00.json  beta_dist-2021-01-05 00:00:00.json  beta_dist-2021-01-06 00:00:00.json  beta_dist-2021-01-07 00:00:00.json  beta_dist-2021-01-08 00:00:00.json  beta_dist-2021-01-11 00:00:00.json  beta_dist-2021-01-12 00:00:00.json  beta_dist-2021-01-13 00:00:00.json  beta_dist-2021-01-14 00:00:00.json  beta_dist-2021-01-15 00:00:00.json  beta_dist-2021-01-18 00:00:00.json  beta_dist-2021-01-19 00:00:00.json  beta_dist-2021-01-20 00:00:00.json  beta_dist-2021-01-21 00:00:00.json  beta_dist-2021-01-22 00:00:00.json  beta_dist-2021-01-25 00:00:00.json  beta_dist-2021-01-26 00:00:00.json  beta_dist-2021-01-27 00:00:00.json  beta_dist-2021-01-28 00:00:00.json  beta_dist-2021-01-29 00:00:00.json  beta_dist-2021-02-01 00:00:00.json  beta_dist-2021-02-02 00:00:00.json  beta_dist-2021-02-03 00:00:00.json  beta_dist-2021-02-04 00:00:00.json  beta_dist-2021-02-05 00:00:00.json  beta_dist-2021-02-08 00:00:00.json  beta_dist-2021-02-09 00:00:00.json  beta_dist-2021-02-10 00:00:00.json  beta_dist-2021-02-11 00:00:00.json  beta_dist-2021-02-12 00:00:00.json  beta_dist-2021-02-15 00:00:00.json  beta_dist-2021-02-16 00:00:00.json  beta_dist-2021-02-17 00:00:00.json  beta_dist-2021-02-18 00:00:00.json  beta_dist-2021-02-19 00:00:00.json  beta_dist-2021-02-22 00:00:00.json  beta_dist-2021-02-23 00:00:00.json  beta_dist-2021-02-24 00:00:00.json  beta_dist-2021-02-25 00:00:00.json  (+842 more)
utils/: beta.py  beta_dists_creator.py
